# hugo-build-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: daily_version_check.yml
src/: lib.rs  test.rs
