[package]
name = "hugo-build"
version = "0.144.1"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "Apache-2.0"
keywords = ["hugo","build-dependencies"]
categories = ["development-tools::build-utils"]
repository = "https://github.com/apimeister/hugo-build-rs/"
documentation = "https://docs.rs/hugo_build"
description = "A wrapper around the hugo binary to proving building capabilities."
rust-version = "1.65"

[dependencies]
reqwest = {version = "0.12", features = ["blocking"] }
tar = "0.4"
flate2 = "1"
